infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloploy-ingress
  namespace: cloploy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: app.cloploy.app
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloploy-api
                port:
                  number: 3121
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloploy-web
                port:
                  number: 80
